--- a/old/css/index.css
+++ b/old/css/index.css
@@ -1,4 +1,30 @@
-.btn{
-    /*margin-right: 5px;*/
+body{
+    font-family: "Open Sans", sans-serif;
+    color: #444444;
+    background-color: #fff;
 }
 
+.img-fluid{
+    object-fit: none;
+    display: flex;
+    object-position: center;
+    width: 100%;
+    max-height: 460px;
+    margin-bottom: 20px;
+}
+
+.btn{
+    border-radius: 99px;
+    width: 100px;
+}
+.img{
+    overflow: hidden;
+}
+.image_presentation{
+    object-fit: cover;
+    position: relative;
+}
+
+.h1{
+    position: absolute;
+}
