--- a/old/css/index.css
+++ b/old/css/index.css
@@ -64,7 +64,7 @@ body{
     width: 1000px;
 }
 
-.card {
+/* .card {
     position: absolute;
     top: 60%;
     left: 10%;
@@ -78,4 +78,4 @@ body{
     top: 60%;
     left: 50%;
     background-color: white;
-}
+} */
