--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -20,11 +20,13 @@ body{
 .img{
     overflow: hidden;
     position: relative;
+    z-index: -1;
     
 }
 .image_presentation{
     object-fit: cover;
     position: relative;
+    z-index: -1;
 }
 
 .h1{
@@ -66,7 +68,11 @@ body{
 }
 
 .why-us .content {
+    position: absolute;
     padding: 30px;
+    top: 55%;
+    left: 10%;
+    width: 20%;
     background: #366EEA;
     border-radius: 4px;
     color: #fff;
@@ -78,10 +84,6 @@ body{
     margin-bottom: 30px;
 }
   
-.why-us .content p {
-    margin-bottom: 30px;
-}
-  
 .why-us .content .more-btn {
     display: inline-block;
     background: rgba(255, 255, 255, 0.2);
@@ -90,38 +92,117 @@ body{
     border-radius: 50px;
     transition: all ease-in-out 0.4s;
 }
-  
-.why-us .content .more-btn i {
-    font-size: 14px;
-}
-  
-.why-us .content .more-btn:hover {
-    color: #1977cc;
-    background: #fff;
-}
-  
-.why-us .icon-boxes .icon-box {
+.why-us .icon-boxes .icon-box1 {
+    position: absolute;
+    top: 55%;
+    left: 32%;
+    width: 20%;
     text-align: center;
     border-radius: 10px;
     background: #fff;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 40px 30px;
-    width: 100%;
+    padding: 30px;
+    
 }
-  
-.why-us .icon-boxes .icon-box i {
-    font-size: 40px;
-    color: #1977cc;
-    margin-bottom: 30px;
+.why-us .icon-boxes .icon-box2 {
+    position: absolute;
+    top: 55%;
+    left: 53%;
+    width: 20%;
+    text-align: center;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    
 }
-  
-.why-us .icon-boxes .icon-box h4 {
-    font-size: 20px;
-    font-weight: 700;
-    margin: 0 0 30px 0;
+.why-us .icon-boxes .icon-box3 {
+    position: absolute;
+    top: 55%;
+    left: 74%;
+    width: 20%;
+    text-align: center;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    
 }
-  
-.why-us .icon-boxes .icon-box p {
-    font-size: 15px;
-    color: #848484;
+
+/* # Services */
+
+.services .icon-box {
+  text-align: center;
+  border: 1px solid #d5e1ed;
+  padding: 80px 20px;
+  transition: all ease-in-out 0.3s;
+}
+
+.services .icon-box .icon {
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  background: #1977cc;
+  border-radius: 5px;
+  transition: all .3s ease-out 0s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  transform-style: preserve-3d;
+}
+
+.services .icon-box .icon i {
+  color: #fff;
+  font-size: 28px;
+}
+
+.services .icon-box .icon::before {
+  position: absolute;
+  content: '';
+  left: -8px;
+  top: -8px;
+  height: 100%;
+  width: 100%;
+  background: #badaf7;
+  border-radius: 5px;
+  transition: all .3s ease-out 0s;
+  transform: translateZ(-1px);
+}
+
+.services .icon-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.services .icon-box h4 a {
+  color: #2c4964;
+}
+
+.services .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.services .icon-box:hover {
+  background: #1977cc;
+  border-color: #1977cc;
+}
+
+.services .icon-box:hover .icon {
+  background: #fff;
+}
+
+.services .icon-box:hover .icon i {
+  color: #1977cc;
+}
+
+.services .icon-box:hover .icon::before {
+  background: #366EEA;
+}
+
+.services .icon-box:hover h4 a, .services .icon-box:hover p {
+  color: #fff;
 }
