--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -4,6 +4,13 @@ body{
     background-color: #fff;
 }
 
+.nav-link:hover{
+  text-decoration: underline;
+  display: inline-block;
+  text-underline-position: under;
+  text-decoration-color: blue;
+}
+
 .img-fluid{
     object-fit: none;
     display: flex;
@@ -131,43 +138,15 @@ body{
 
 /* # Services */
 
+.section-title{
+  text-align: center;
+}
+
 .services .icon-box {
   text-align: center;
   border: 1px solid #d5e1ed;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
-}
-
-.services .icon-box .icon {
-  margin: 0 auto;
-  width: 64px;
-  height: 64px;
-  background: #1977cc;
-  border-radius: 5px;
-  transition: all .3s ease-out 0s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  transform-style: preserve-3d;
-}
-
-.services .icon-box .icon i {
-  color: #fff;
-  font-size: 28px;
-}
-
-.services .icon-box .icon::before {
-  position: absolute;
-  content: '';
-  left: -8px;
-  top: -8px;
-  height: 100%;
-  width: 100%;
-  background: #badaf7;
-  border-radius: 5px;
-  transition: all .3s ease-out 0s;
-  transform: translateZ(-1px);
 }
 
 .services .icon-box h4 {
