--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -28,13 +28,11 @@ body{
 .img{
     overflow: hidden;
     position: relative;
-    z-index: -1;
     
 }
 .image_presentation{
     object-fit: cover;
     position: relative;
-    z-index: -1;
 }
 
 .h1{
@@ -148,6 +146,8 @@ body{
   border: 1px solid #d5e1ed;
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .services .icon-box h4 {
@@ -158,6 +158,7 @@ body{
 
 .services .icon-box h4 a {
   color: #2c4964;
+  text-decoration: none;
 }
 
 .services .icon-box p {
