--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -48,8 +48,6 @@ li {
 .image_presentation{
     object-fit: cover;
     position: relative;
-    /* 
-    overflow-x: hidden; */
 }
 
 .h1{
@@ -65,6 +63,22 @@ li {
     cursor: pointer;
     border-radius: 99px;
     width: 200px;
+}
+
+.btnmore{
+  position: absolute;
+    top: 80%;
+    left: 15%;
+    font-size: 16px;
+    padding: 12px 12px;
+    cursor: pointer;
+    border-radius: 99px;
+    width: 200px;
+}
+
+.card-body h5{
+  font-weight: bold;
+  text-align: center;
 }
 
 .welcometext {
