--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -114,6 +114,42 @@ li {
     border-radius: 4px;
     color: #fff;
 }
+
+.simple{
+  position: absolute;
+  padding: 30px;
+  text-align: center;
+  top: 60%;
+  left: 35%;
+  width: 20%;
+  background: #fff;
+  border-radius: 4px;
+  color: black;
+}
+
+.serv{
+  position: absolute;
+  padding: 30px;
+  text-align: center;
+  top: 60%;
+  left: 55%;
+  width: 20%;
+  background: #fff;
+  border-radius: 4px;
+  color: black;
+}
+
+.client{
+  position: absolute;
+  padding: 30px;
+  text-align: center;
+  top: 60%;
+  left: 75%;
+  width: 20%;
+  background: #fff;
+  border-radius: 4px;
+  color: black;
+}
   
 .why-us .content h3 {
     font-weight: 700;
@@ -121,50 +157,9 @@ li {
     margin-bottom: 30px;
 }
   
-.why-us .content .more-btn {
-    display: inline-block;
-    background: rgba(255, 255, 255, 0.2);
-    padding: 6px 30px 8px 30px;
-    color: #f2f2f2;
-    border-radius: 50px;
-    transition: all ease-in-out 0.4s;
-}
-.why-us .icon-boxes .icon-box1 {
-    position: absolute;
-    top: 55%;
-    left: 32%;
-    width: 20%;
-    text-align: center;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    
-}
-.why-us .icon-boxes .icon-box2 {
-    position: absolute;
-    top: 55%;
-    left: 53%;
-    width: 20%;
-    text-align: center;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    
-}
-.why-us .icon-boxes .icon-box3 {
-    position: absolute;
-    top: 55%;
-    left: 74%;
-    width: 20%;
-    text-align: center;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    
-}
+
+
+
 
 /* # Services */
 
