--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -150,13 +150,10 @@ li {
   border-radius: 4px;
   color: black;
 }
-  
-.why-us .content h3 {
-    font-weight: 700;
-    font-size: 34px;
-    margin-bottom: 30px;
+
+.video{
+  background-color: #99CEFD;
 }
-  
 
 
 
