--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -155,59 +155,12 @@ li {
   background-color: #99CEFD;
 }
 
-
-
-
-/* # Services */
-
-.section-title{
+.services{
   text-align: center;
 }
 
-.services .icon-box {
-  text-align: center;
-  border: 1px solid #d5e1ed;
-  padding: 80px 20px;
-  transition: all ease-in-out 0.3s;
-  text-decoration: none;
-  display: inline-block;
-}
 
-.services .icon-box h4 {
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 24px;
-}
 
-.services .icon-box h4 a {
-  color: #2c4964;
-  text-decoration: none;
-}
 
-.services .icon-box p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
 
-.services .icon-box:hover {
-  background: #1977cc;
-  border-color: #1977cc;
-}
-
-.services .icon-box:hover .icon {
-  background: #fff;
-}
-
-.services .icon-box:hover .icon i {
-  color: #1977cc;
-}
-
-.services .icon-box:hover .icon::before {
-  background: #366EEA;
-}
-
-.services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #fff;
-}
 
