--- a/projeto/css/index.css
+++ b/projeto/css/index.css
@@ -195,7 +195,22 @@ li {
   color: black;
 }
 
+.contact{
+  text-align: center;
+}
 
+.contact h3{
+  font-weight: bold;
+}
+
+.contact label{
+  font-weight: bold;
+}
+
+.faqHeader {
+  font-size: 27px;
+  margin: 20px;
+}
 
 
 
