--- a/projeto/css/perfil.css
+++ b/projeto/css/perfil.css
@@ -276,4 +276,13 @@
     border: 0;
     margin-bottom: 1rem;
   }
+
+/* Footer */
+
+#footer {
+  color: #444444;
+  font-size: 14px;
+  background: #DCDBDB;
+}
+
   
