--- a/projeto/css/detailLab.css
+++ b/projeto/css/detailLab.css
@@ -15,7 +15,6 @@ a:hover {
   color: #366EEA;
   text-decoration: none;
 }  
-
 #header {
   background: #fff;
   transition: all 0.5s;
@@ -25,6 +24,42 @@ a:hover {
   box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
   
 }
+#header.header-scrolled {
+  top: 0;
+}
+#header .logo {
+  font-size: 32px;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  font-family: "Poppins", sans-serif;
+}
+#header .logo a {
+  color: #2c4964;
+}
+#header .logo img {
+  max-height: 40px;
+}
+@media (max-width: 992px) {
+  #header {
+    top: 0;
+  }
+  #header .logo {
+    font-size: 28px;
+  }
+}
+.welcomeuser{
+  padding-right: 30px;
+  padding-top: 15px;
+}
+
+.btn {
+  border-radius: 99px;
+    width: 100px;
+}
+/* Menu */
 
 .nav-menu ul {
   margin: 0;
@@ -58,6 +93,7 @@ a:hover {
   border-color: #1977cc;
 }
 
+
 /* Footer */
 
 #footer {
@@ -72,7 +108,6 @@ a:hover {
 
 .container-fluid {
     padding-top: 12vh !important;
-    
 }
 
 .card {
@@ -96,96 +131,17 @@ input {
     width: 180px
 }
 
-input:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid #512DA8;
-    outline-width: 0
-}
-
-::placeholder {
-    color: #000;
-    opacity: 1
-}
-
-:-ms-input-placeholder {
-    color: #fff
-}
-
-::-ms-input-placeholder {
-    color: #fff
-}
-
-button:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    outline-width: 0
-}
-
 .datepicker {
     background-color: #fff !important;
     color: #000 !important;
     padding: 10px !important
 }
 
-
-thead tr:nth-child(3) th {
-    color: #000 !important;
-    font-weight: bold;
-    padding-top: 20px;
-    padding-bottom: 10px
-}
-
-.dow,
-.old-day,
-.day,
-.new-day {
-    width: 40px !important;
-    height: 40px !important;
-    border-radius: 0px !important
-}
-
-.old-day:hover,
-.day:hover,
-.new-day:hover,
-.month:hover,
-.year:hover,
-.decade:hover,
-.century:hover {
-    border-radius: 6px !important;
-    background-color: #eee;
-    color: #000
-}
-
-.active {
+/* .active {
     border-radius: 6px !important;
     background-image: linear-gradient(#90CAF9, #64B5F6) !important;
     color: #000 !important
-}
-
-.disabled {
-    color: #616161 !important
-}
-
-.prev,
-.next,
-.datepicker-switch {
-    border-radius: 0 !important;
-    padding: 20px 10px !important;
-    text-transform: uppercase;
-    font-size: 20px;
-    color: #000 !important;
-    opacity: 0.8
-}
-
-.prev:hover,
-.next:hover,
-.datepicker-switch:hover {
-    background-color: inherit !important;
-    opacity: 1
-}
+} */
 
 .cell {
     border: 1px solid #BDBDBD;
@@ -202,7 +158,6 @@ thead tr:nth-child(3) th {
     color: #fff
 }
 
-
 .fa-calendar {
     color: #fff;
     font-size: 30px;
@@ -211,25 +166,17 @@ thead tr:nth-child(3) th {
     cursor: pointer
 }
 
-
 #marcartxt {
     margin-top: 20vh;
     margin-bottom: -10vh;
-
 }
 
 #btnMarcar {
-  /* */
-  margin-top: -10vh;
-  margin-left: 120vh;
-  background-color: #818496;
+  margin-left: 120vh; 
+  background-color: #3D5AFE;
   border-radius: 50px;  
 }
 
 #contenct{
   margin-top: 100px;
-}
-
-#comments {
-  background-color: #f1f7fd;
 }
