--- a/projeto/css/labs.css
+++ b/projeto/css/labs.css
@@ -95,6 +95,16 @@ a:hover {
   background: #166ab5;
   color: #fff;
 }
+
+.welcomeuser{
+  padding-right: 30px;
+  padding-top: 15px;
+}
+.btn {
+  border-radius: 99px;
+  width: 150px;
+}
+
 #footer {
   color: #444444;
   font-size: 14px;
